--- a/ClnArchMVCApp/Presentation/appsettings.json
+++ b/ClnArchMVCApp/Presentation/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "Default": "Server=.;Database=FurnitureShopDB;Trusted_Connection=True;"
+  }
 }
