--- a/ClnArchMVCApp/Presentation/Presentation.csproj
+++ b/ClnArchMVCApp/Presentation/Presentation.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="AjaxControlToolkit" Version="20.1.0" />
+    <PackageReference Include="Microsoft.AspNet.Mvc" Version="5.2.9" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.7" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="6.0.7">
       <PrivateAssets>all</PrivateAssets>
